--- a/.speakeasy/gen.yaml
+++ b/.speakeasy/gen.yaml
@@ -24,6 +24,9 @@ php:
       shared: Models/Components
       webhooks: Models/Webhooks
   inputModelSuffix: input
+  laravelServiceProvider:
+    enabled: false
+    svcName: openapi
   maxMethodParams: 4
   namespace: Dub
   outputModelSuffix: output
