openapi-generation@86842e2f93be010007d4162d51ddfb0b91318211

--- a/.speakeasy/gen.yaml
+++ b/.speakeasy/gen.yaml
@@ -28,6 +28,7 @@ php:
     enabled: false
     svcName: openapi
   maxMethodParams: 4
+  methodArguments: infer-optional-args
   namespace: Dub
   outputModelSuffix: output
   packageName: dub/dub-php
